--- a/css/Physics.css
+++ b/css/Physics.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
 *
 {
   margin: 0;
@@ -10,8 +9,9 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(#ffc38c, #ff9b40)
+  background: radial-gradient(#ffc38c, #ff9b40);
 }
+/*
 body
 {
   background: #0a2a43;
@@ -69,4 +69,4 @@ section img
 #road
 {
     z-index: 2;
-}
+}*/
