--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,40 @@ ul
   display: block;
   padding: 0 30px;
   opacity: 1;
+  position: fixed;
+  left: 270px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.3s ease;
+}
+.section.back-section
+{
+  z-index: 1;
+}
+.section.active
+{
+  z-index: 2;
+  opacity: 1;
+  animation: slideSection 0.5s ease;
+}
+@keyframes slideSection
+{
+  0%
+  {
+    transform: translateX(100%);
+  }
+  100%
+  {
+    transform: translateX(0%);
+  }
 }
 .hidden
 {
   display: none !important;
-}
-.main-content
-{
-  padding-left: 270px;
 }
 .padd-15
 {
@@ -149,6 +175,7 @@ ul
   justify-content: center;
   align-items: center;
   z-index: 10;
+  transition: all 0.3s ease;
 }
 .aside .logo
 {
@@ -207,6 +234,7 @@ ul
   display: none;
   align-items: center;
   justify-content: center;
+  transition: all 0.3s ease;
 }
 .aside .nav-toggler span
 {
@@ -215,6 +243,10 @@ ul
   background: var(--skin-color);
   display: inline-block;
   position: relative;
+}
+.aside .nav-toggler.open span
+{
+  background-color: transparent;
 }
 .aside .nav-toggler span::before
 {
@@ -226,6 +258,11 @@ ul
   top: -6px;
   left: 0;
 }
+.aside .nav-toggler.open span::before
+{
+  transform: rotate(45deg);
+  top: 0;
+}
 .aside .nav-toggler span::after
 {
   content: '';
@@ -235,6 +272,11 @@ ul
   position: absolute;
   top: 6px;
   left: 0;
+}
+.aside .nav-toggler.open span::after
+{
+  transform: rotate(-45deg);
+  top: 0;
 }
 .aside .nav
 {
@@ -308,6 +350,8 @@ h3.my-profession
   max-width: 40%;
   text-align: center;
   position: relative;
+  top: 110px;
+
 }
 .home-img::after
 {
@@ -318,7 +362,7 @@ h3.my-profession
   border-bottom: 10px solid var(--skin-color);
   border-right: 10px solid var(--skin-color);
   right: 20px;
-  bottom: 60px;
+  bottom: 170px;
 }
 .home-img::before
 {
@@ -397,7 +441,6 @@ h3.my-profession
 }
 .about .about-content .personal-info .buttons .btn
 {
-  margin-right: 15px;
   margin-top: 10px;
 }
 .about .about-content .skills
@@ -540,7 +583,8 @@ h3.my-profession
 }
 .service .service-item
 {
-  margin-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 10px;
   flex: 0 0 33.33%; /*Cosi stanno 3 per riga*/
   max-width: 33.33%;
 }
@@ -573,6 +617,12 @@ h3.my-profession
   line-height: 60px;
   color: var(--skin-color);
   transition: all 0.3s ease;
+}
+.service .service-content .service-text p
+{
+  font-size: 16px;
+  line-height: 25px;
+  color: var(--text-black-700);
 }
 .service .service-item .service-item-inner:hover .icon
 {
@@ -691,13 +741,34 @@ h3.my-profession
 }
 @media (max-width:1199px)
 {
+  .section .container
+  {
+    padding-top: 70px;
+  }
   .aside
   {
     left: -270px;
   }
-  .main-content
+  .aside.open
   {
-    padding-left: 0
+    left: 0;
+  }
+  .aside .nav-toggler
+  {
+    display: flex;
+    left: 30px;
+  }
+  .aside .nav-toggler.open
+  {
+    left: 300px;
+  }
+  .section
+  {
+    left: 0;
+  }
+  .section.open
+  {
+    left: 270px;
   }
   .about .about-content .personal-info .info-item p span
   {
