--- a/css/Physics.css
+++ b/css/Physics.css
@@ -9,7 +9,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(#ffc38c, #ff9b40);
+  background: radial-gradient(#000, #000);
 }
 /*
 body
