Pyhisics part, experience

--- a/css/Physics.css
+++ b/css/Physics.css
@@ -1,72 +1,47 @@
-*
+/*
 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+}*/
 #canvas1{
   position: absolute;
   top: 0; left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100%; /*CON 100% SAREBBE TUTTA LA PAGINA*/
+  height: 60%;
   background: radial-gradient(#000, #000);
 }
-/*
-body
+p
 {
-  background: #0a2a43;
-  min-height: 1500px;
+  margin-left: 30px;
+  margin-right: 40px;
+  text-align: justify;
+  text-justify: inter-word;
 }
-section
+
+h2.title
 {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  text-align: center; /*Mi mette il titolo al centro*/
+  margin-top: 400px; /* Mi sposta tutto gli h2 in basso*/
+}
+h3
+{
+  text-align: center; /*Mi mette il titolo al centro*/
+}
+.table {
+	display: table;   /* Allow the centering to work */
+	margin: 0 auto;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.column {
+  float: left;
+  width: 33.33%;
+}
+/* Clear floats after the columns */
+.row {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
-section:before
-{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  background: linear-gradient(to top, #0a2a43, transparent);
-  z-index: 10000;
-}
-section:after
-{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to top, #0a2a43, transparent);
-  z-index: 10000;
-  mix-blend-mode: color;
-}
-section img
-{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  pointer-events: none;
-}
-#text
-{
-  position: relative;
-  color: #fff;
-  font-size: 10em;
-  z-index: 1;
-}
-#road
-{
-    z-index: 2;
-}*/
