Gallery-Photos. For Thesis

--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ h3.my-profession
 {
   flex: 0 0 100%;
   max-width: 100%;
+  text-align: justify;
 }
 .about .about-content .about-text h3
 {
@@ -646,6 +647,12 @@ h3.my-profession
   font-size: 16px;
   color: var(--text-black-700);
   line-height: 25px;
+}
+.disc
+{
+  text-align: justify;
+  text-justify: inter-word;
+  color: var(--text-black-700);
 }
 /* portfolio */
 
