--- a/css/index.css
+++ b/css/index.css
@@ -65,11 +65,15 @@ a, a:hover {
 
 #site-navbar {
   list-style: none;
-    list-style-type: none;
+  list-style-type: none;
   font-size: 1.3em;
 }
 
 .page-section li {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+div {
+  text-align: justify;
+  text-justify: inter-word;
 }
