--- a/css/Physics.css
+++ b/css/Physics.css
@@ -17,6 +17,7 @@ p
   margin-right: 40px;
   text-align: justify;
   text-justify: inter-word;
+  margin-bottom: 25px;
 }
 
 h2.title
@@ -37,11 +38,36 @@ ul {
   margin: 0;
   padding: 0;
 }
-.column {
+
+.column1 {
   float: left;
-  width: 33.33%;
+  width: 25%;
+  text-align: center;
+  margin-bottom: 25px;
 }
+.column2 {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+.column3 {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+.column4 {
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+
 /* Clear floats after the columns */
-.row {
-  display: flex;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.wow{
+  margin-top: 140px;
+  text-align: justify;
 }
